[package]
name = "crossbeam-stm"
version = "0.3.1"
description = "Software Transactional Memory system built on top of crossbeam-epoch"
license = "MIT/Apache-2.0"
readme = "README.md"
authors = ["k3d3 <k@3d3.ca>"]
repository = "https://github.com/k3d3/crossbeam-stm"
homepage = "https://github.com/k3d3/crossbeam-stm"
documentation = "https://docs.rs/crossbeam-stm"

[dependencies]
crossbeam-epoch = "0.4"

[dev-dependencies]
parking_lot = "0.5.5"
